fixed all issue
